<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textAddRecipe"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_recipe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAddRecipeName"
        style="@style/SubTitleButtonBurntSienna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddRecipe"/>

    <EditText
        android:id="@+id/editTextAddRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/edit_text_add_recipe_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddRecipeName"/>

    <TextView
        android:id="@+id/textAddRecipeIngredient"
        style="@style/SubTitleButtonBurntSienna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_ingredient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddRecipeName"/>

    <EditText
        android:id="@+id/editTextAddRecipeIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/edit_text_add_recipe_ingredient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editTextAddRecipeIngredientQuantity"
        app:layout_constraintTop_toBottomOf="@id/textAddRecipeIngredient"/>

    <EditText
        android:id="@+id/editTextAddRecipeIngredientQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/edit_text_add_recipe_ingredient_quantity"
        app:layout_constraintLeft_toRightOf="@id/editTextAddRecipeIngredient"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddRecipeIngredient" />

    <Button
        android:id="@+id/buttonAddRecipeIngredient"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_recipe_ingredient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddRecipeIngredient"/>

    <TextView
        android:id="@+id/textAddRecipeStep"
        style="@style/SubTitleButtonBurntSienna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddRecipeIngredient"/>

    <EditText
        android:id="@+id/editTextAddRecipeStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/edit_text_add_recipe_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddRecipeStep"/>

    <Button
        android:id="@+id/buttonAddRecipeStep"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add_recipe_step"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddRecipeStep"/>

    <Button
        android:id="@+id/buttonSaveRecipe"
        style="@style/SubTitleButtonBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_recipe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>